demo page removed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/web-manifest-combined.json",
   "name": "qwik-project-name",
   "short_name": "Welcome to Qwik",
-  "start_url": "/card",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#001122",
   "description": "A Qwik project app.",
